# langchain-langgraph-course-tracker

./: .gitignore  README.md  progress_tracker.md  requirements.txt
langchain-essentials-tracker/: .gitignore  README.md  pyproject.toml
langchain-essentials-tracker/agents/sql-agent/: README.md  main.py
langchain-essentials-tracker/agents/sql-agent/src/agent/: prompts.py  sql_agent.py  tools.py
langchain-essentials-tracker/agents/sql-agent/src/context/: runtime_context.py
langchain-essentials-tracker/agents/sql-agent/src/db/: connection.py
langchain-essentials-tracker/notebooks/: L1_fast_agent.ipynb  L2_messages.ipynb
langchain-essentials-tracker/src/: __init__.py
langchain-essentials-tracker/studio/: README.md  langgraph.json  sql_agent_experiment.py
langchain-essentials-tracker/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
notes/: summaries.md
sections/01_course_introduction/lectures/: 01_course_objectives.py
sections/02_langchain_fundamentals/projects/hello-world/: main.py  pyproject.toml
sections/03_ai_agents/projects/react-search-agent/: .gitignore  main.py  pyproject.toml
sections/04_react_agents_from_scratch/projects/ReAct-search-agent/: main.py  main_v2.py  prompt.py  pyproject.toml  schemas.py
sections/04_react_agents_from_scratch/projects/react-langchain/: callbacks.py  main.py  main_enhanced_v2.py  pyproject.toml
sections/05_function_calling/exercises/: main.py  pyproject.toml
sections/06_rag_implementation/projects/chat_with_pdf/: .gitignore  main.py  pyproject.toml
sections/06_rag_implementation/projects/medium_analyzer/: ingestion.py  main.py  pyproject.toml
sections/06_rag_implementation/projects/medium_analyzer/data/: MediumBlog1.txt
sections/07_advanced_rag/projects/documentation-helper/: .gitignore  Tavily Crawl Demo Tutorial.ipynb  ingestion.py  pyproject.toml
sections/10_langgraph_introduction/projects/react_agent_with_langgraph/: logger.py  main.py  nodes.py  pyproject.toml  react.py
