[project]
name = "documentation-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "black",
    "tiktoken",
    "openai",
    "unstructured",
    "nltk",
    "fastapi",
    "jinja2",
    "uvicorn",
    "streamlit",
    "streamlit-chat",
    "tqdm",
    "isort",
    "langchainhub",
    "firecrawl-py",
    "langchain-community",
    "langsmith",
    "pillow",
    "certifi",
    "langchain-chroma",
    "python-dotenv",
    "langchain-tavily",
    "langchain-pinecone",
    "langchain-google-genai>=3.2.0",
    "dotenv>=0.9.9",
    "langchain-text-splitters>=1.0.0",
    "langchain-huggingface>=1.1.0",
    "sentence-transformers>=5.1.2",
    "rich>=14.2.0",
    "ipykernel>=7.1.0",
]
